plugins {
    id 'java'
    id 'org.jetbrains.intellij.platform'
}

group = 'com.lv.tool'
version = '2.5.0'

repositories {
    mavenCentral()
    maven {
        url = 'https://maven.aliyun.com/repository/public'
        allowInsecureProtocol = true
    }
    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    implementation 'org.jsoup:jsoup:1.22.2'
    implementation 'org.xerial:sqlite-jdbc:3.53.1.0'
    implementation 'io.reactivex.rxjava3:rxjava:3.1.12'
    implementation 'com.google.code.gson:gson:2.14.0'

    // IntelliJ Platform
    intellijPlatform {
        intellijIdeaCommunity "2024.3"
    }

    // Test dependencies
    testImplementation platform('org.junit:junit-bom:6.1.0')
    testImplementation platform('org.mockito:mockito-bom:5.23.0')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-junit-jupiter'
}

test {
    useJUnitPlatform()
}

intellijPlatform {
    instrumentCode = false

    patchPluginXml {
        sinceBuild = '243'
        changeNotes = """
              <h3>2.5.0 版本更新</h3>
              <ul>
                <li>统一响应式阅读链路，清理旧实现和重复任务管理逻辑</li>
                <li>简化服务注册与依赖结构，移除旧存储、缓存、诊断和来源模块</li>
                <li>优化书籍、章节缓存和阅读进度的数据访问路径</li>
                <li>修复通知栏模式销毁阶段的服务初始化异常</li>
                <li>修复书架删除、通知栏触发、面板切书同步和章节事件处理问题</li>
                <li>清理无用导入并补充书籍仓储、章节事件、ViewModel 等回归测试</li>
              </ul>
              <h3>Version 2.5.0</h3>
              <ul>
                <li>Unified the reactive reading pipeline and removed legacy implementations and duplicate task management logic</li>
                <li>Simplified service registration and dependency structure by removing legacy storage, cache, diagnostic, and source modules</li>
                <li>Improved data access paths for books, chapter cache, and reading progress</li>
                <li>Fixed service initialization during notification mode disposal</li>
                <li>Fixed bookshelf deletion, notification triggering, panel book-switch synchronization, and chapter event handling</li>
                <li>Cleaned unused imports and added regression tests for repository, chapter events, and ViewModel behavior</li>
              </ul>
              """
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

wrapper {
    gradleVersion = '9.5.1'
    distributionType = Wrapper.DistributionType.BIN
}

// Add duplicate handling strategy for Jar tasks
tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}